--- a/KulTIP/index.html
+++ b/KulTIP/index.html
@@ -13,7 +13,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<link rel="icon" type="image/x-icon" href="images/LogoTransparent.jpg">
+	<link rel="icon" type="image/x-icon" href="images/XCLogoTransparent.png">
     <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/theme/ibornTheme.css" id="theme">
     <!--<link rel="stylesheet" href="css/theme/demo.css" id="theme">-->
@@ -33,51 +33,74 @@
 
 <body>
     <div class="reveal">
-        <a href="index.html?#/titleSection" class="contentLink" style="font-size: 12px; color: #8d8d8d; padding: 3px;"><img src="images/IbornLogoTransparent.jpg" style="margin-top:20px; margin-left:20px; width: 50px; height: 50px;" /></a>
+        <a href="index.html?#/titleSection" class="contentLink" style="font-size: 12px; color: #8d8d8d; padding: 3px;"><img src="images/XCLogoTransparent.png" style="margin-top:20px; margin-left:20px; width: 50px;" /></a>
         <div id="slideNumber" class="contentLink" style="float: right; color: #8d8d8d; padding: 3px;"></div>
         <div class="slides">
             <!--<section id="titleSection" data-background="images/background.jpg" data-background-repeat="repeat" data-background-size="100px">-->
             <section id="titleSection">
-                <h2>Xperience Capsule</h2>
-				<h4>The world of experience</h4>
+				<h2>Xperience Capsule</h2>
 				<hr />
-				<h3>Mobile Application</h3>
+				<h4>Sensing Experience</h4>
 				<hr />
 				<div>
 					<img src="images/XCLogoTransparent.png" style="margin-top:20px; margin-left:20px; height: 150px; border: none; background: none" />
 				</div>
-                <div>
-                    <div style="text-align: center">
-                        iborn.net
-                    </div>
-                </div>
-
+				<div>
+					<img src="images/IbornLogoTransparent.jpg" style="margin-top:20px; margin-left:20px; height: 50px; border: none; background: none" />
+					<img src="images/BCLogoTransparent.png" style="margin-top:20px; margin-left:20px; height: 50px; border: none; background: none" />
+					<img src="images/FinkiLogoTransparent.png" style="margin-top:20px; margin-left:20px; height: 50px; border: none; background: none" />
+				</div>
                 <p style="margin-top: 20px; clear: both">
                     <small>КулТИП 2014</small>
                 </p>
             </section>
 
             <section id="firstSection">
-                <h3>Idea</h2>
-                <ul>
-                    <li>li1</li>
-                    <li>li1</li>
-					<li>li1</li>
-                </ul>
+                <h3>Goal</h2>
+                <p>Use mobile technology to connect senses and content</p>
+                <img src="images/3senses.jpg" style="height: 200px" />
+				<img src="images/PhoneAndTablet.jpg" style="height: 200px" />
+				<img src="images/Museum.png" style="height: 200px" />
             </section>
 			
 			<section id="secondSection">
 				<section>
-					<h3>TITLE</h2>
+					<h3>How can this be be accomplished? </h2>
 					<ul>
-						<li>li1</li>
-						<li>li1</li>
-						<li>li1</li>
+						<li>Associate content to Point of Experience</li>
+						<li>Point and content are Experience Capsule</li>
+						<li>Types of capsules</li>
+						<li>Detect when the user is near a capsule</li>
 					</ul>
 				</section>
 				<section>
-					<h3>TITLE</h2>
-					<img src="images/IbornLogoTransparent.jpg" />
+					<h3>Who can use the application?</h2>
+					<p>Around 2 billion people own a smartphone</p>
+					<img src="images/SmartPhoneSales.png" />
+				</section>
+				<section>
+					<h3>Who wins?</h2>
+					<ul>
+						<li>Users</li>
+						<li>Cultural institutions</li>
+						<li>Our brand, Xperience Capsule</li>
+					</ul>
+				</section>
+				<section>
+					<h3>Business?</h2>
+					<ul>
+						<li>Marketing</li>
+						<li>Revenue</li>
+						<li>Competition?
+							<ul>
+								<li>Social media</li>
+								<li>Tourist guides</li>
+								<li>Geocaching networks</li>
+								<li>Augmented reality</li>
+							</ul>
+						</li>
+						<li><strong>Our idea: combine all to share experience!</strong></li>
+					</ul>
 				</section>
             </section>
 
