Changes in speech and presentation

--- a/KulTIP/index.html
+++ b/KulTIP/index.html
@@ -40,7 +40,7 @@
             <section id="titleSection">
 				<h2>Xperience Capsule</h2>
 				<hr />
-				<h4>Sensing Experience</h4>
+				<h4>Reveal your story</h4>
 				<hr />
 				<div>
 					<img src="images/XCLogoTransparent.png" style="margin-top:20px; margin-left:20px; height: 150px; border: none; background: none" />
@@ -50,12 +50,13 @@
 					<img src="images/BCLogoTransparent.png" style="margin-top:20px; margin-left:20px; height: 50px; border: none; background: none" />
 					<img src="images/FinkiLogoTransparent.png" style="margin-top:20px; margin-left:20px; height: 50px; border: none; background: none" />
 				</div>
+				<blockquote style="color: #333">&ldquo;The only source of knowledge is experience.&rdquo; - Albert Einstein</blockquote>
                 <p style="margin-top: 20px; clear: both">
                     <small>КулТИП 2014</small>
                 </p>
             </section>
 
-            <section id="firstSection">
+            <section id="goal">
                 <h3>Goal</h2>
                 <p>Use mobile technology to connect senses and content</p>
                 <img src="images/3senses.jpg" style="height: 200px" />
@@ -63,49 +64,54 @@
 				<img src="images/Museum.png" style="height: 200px" />
             </section>
 			
-			<section id="secondSection">
-				<section>
-					<h3>How can this be be accomplished? </h2>
-					<ul>
-						<li>Associate content to Point of Experience</li>
-						<li>Point and content are Experience Capsule</li>
-						<li>Types of capsules</li>
-						<li>Detect when the user is near a capsule</li>
-					</ul>
-				</section>
-				<section>
-					<h3>Who can use the application?</h2>
-					<p>Around 2 billion people own a smartphone</p>
-					<img src="images/SmartPhoneSales.png" />
-				</section>
-				<section>
-					<h3>Who wins?</h2>
-					<ul>
-						<li>Users</li>
-						<li>Cultural institutions</li>
-						<li>Our brand, Xperience Capsule</li>
-					</ul>
-				</section>
-				<section>
-					<h3>Business?</h2>
-					<ul>
-						<li>Marketing</li>
-						<li>Revenue</li>
-						<li>Competition?
-							<ul>
-								<li>Social media</li>
-								<li>Tourist guides</li>
-								<li>Geocaching networks</li>
-								<li>Augmented reality</li>
-							</ul>
-						</li>
-						<li><strong>Our idea: combine all to share experience!</strong></li>
-					</ul>
-				</section>
-            </section>
+			<section id="how">
+				<h3>How can this be be accomplished? </h2>
+				<ul>
+					<li>Associate <strong>personal story</strong> to Point of Experience</li>
+					<li>Pictures, audio guides, video recordings, 3d models, text...</li>
+					<li>Point and content are Experience Capsule</li>
+					<li>Types of capsules</li>
+					<li>Detect when the user is near a capsule</li>
+				</ul>
+				<img src="images/Multimedia.jpg" style="height: 200px" />
+			</section>
+			
+			<section id="who">
+				<h3>Who can use the application?</h2>
+				<p>over 50% of the world population use a smartphone</p>
+				<img src="images/SmartPhoneSales.png" />
+			</section>
+			
+			<section id="wins">
+				<h3>Who wins?</h2>
+				<ul>
+					<li>Users</li>
+					<li>Cultural institutions</li>
+					<li>Our brand, Xperience Capsule</li>
+				</ul>
+			</section>
+			
+			<section id="business">
+				<h3>Business</h2>
+				<ul>
+					<li>Revenue</li>
+					<li>Marketing</li>
+					<li>Competition?
+						<ul>
+							<li>Social media</li>
+							<li>Tourist guides</li>
+							<li>Geocaching networks</li>
+							<li>Augmented reality</li>
+						</ul>
+					</li>
+					
+				</ul>
+			</section>
 
-            <section id="closingSection">
-                <h2>THANK YOU!</h1>
+            <section id="closing">
+				<h3>Our idea: </h3>
+				<h2><strong>combine all to share experience!</strong></h2>
+				
             </section>
 
         </div>
