Changes to the dev presentation

--- a/IbornDssMeeting20150902/Dev/index.html
+++ b/IbornDssMeeting20150902/Dev/index.html
@@ -56,7 +56,7 @@
             </section>
 
             <section id="firstSection">
-                <h3>AGENDA</h2>
+                <h3>AGENDA</h3>
                 <ul>
 					<li>Development team</li>
 					<li>Business Processes & Automation</li>
@@ -66,7 +66,7 @@
 			
 			<section id="secondSection">
 				<section>
-					<h3>Development Team</h2>
+					<h3>Development Team</h3>
 					<div>
 						<img src="images/DevOpsQa.png" />
 					</div>
@@ -81,11 +81,11 @@
 			
 			<section id="thirdSection">
 				<section>
-					<h3>Achievements & Targets</h2>
+					<h3>Achievements & Targets</h3>
 					<ul>
-						<li>Where were we?</li>
-						<li>What are we now?</li>
-						<li>What next?</li>
+						<li>Where were we <strong>3 years ago?</strong></li>
+						<li>Where are we <strong>now?</strong></li>
+						<li>What does the <strong>future</strong> hold?</li>
 					</ul>
 					<div>
 						<img src="images/target.jpg" />
@@ -93,9 +93,45 @@
 				</section>
 				
 				<section>
-					<h3>Business Processes</h2>
+					<h3>Business Processes & Automation</h3>
 					<ul>
-						<li></li>
+						<li>
+							<strong>Adding New Clients</strong>
+							<ul>
+								<li>Using External Data Sources</li>
+								<li>Generating Documents</li>
+								<li>Debtors, Invoicing</li>
+								<li>Sending Documents, Emails</li>
+								<li>Employee Management: Client portal & Imports</li>
+							</ul>
+						</li>
+						<li>
+							<strong>Administration of Existing Clients</strong>
+							<ul>
+								<li>Editing & Versioning of Policies</li>
+								<li>Price Management & Configuration</li>
+								<li>Renewals, Renewal Reminders</li>
+							</ul>
+						</li>
+						<li>
+							<strong>Claims Handling</strong>
+							<ul>
+								<li>User Portal</li>
+								<li>Finding Treatment Providers</li>
+								<li>Satisfaction Surveys</li>
+							</ul>
+						</li>
+					</ul>
+				</section>
+				
+				<section>
+					<h3>What's Holding Us Down?</h3>
+					<ul>
+						<li>Communication & Language Barrier</li>
+						<li>Understanding Business Processes</li>
+						<li>Understanding Technology</li>
+						<li>Resources</li>
+						<li>Deadlines</li>
 					</ul>
 				</section>
             </section>
