--- a/IbornDssMeeting20150902/Dev/index.html
+++ b/IbornDssMeeting20150902/Dev/index.html
@@ -58,9 +58,9 @@
             <section id="firstSection">
                 <h3>AGENDA</h3>
                 <ul>
-					<li>Development team</li>
+					<li>Development Team</li>
+					<li>Achievements & Targets</li>
 					<li>Business Processes & Automation</li>
-					<li>Software Development Process</li>
                 </ul>
             </section>
 			
@@ -116,9 +116,10 @@
 						<li>
 							<strong>Claims Handling</strong>
 							<ul>
-								<li>User Portal</li>
+								<li>Managing Claims & Users</li>
 								<li>Finding Treatment Providers</li>
 								<li>Satisfaction Surveys</li>
+								<li>User Portal</li>
 							</ul>
 						</li>
 					</ul>
@@ -129,7 +130,9 @@
 					<ul>
 						<li>Communication & Language Barrier</li>
 						<li>Understanding Business Processes</li>
+						<li>Missing Specification & Documentation</li>
 						<li>Understanding Technology</li>
+						<li>Maintaining Older Systems</li>
 						<li>Resources</li>
 						<li>Deadlines</li>
 					</ul>
