--- a/Danmark20151006/QA/index.html
+++ b/Danmark20151006/QA/index.html
@@ -52,22 +52,65 @@
                 </div>
 
                 <p style="margin-top: 20px; clear: both">
-                    <small>Skopje 2015</small>
+                    <small>Copenhagen 2015</small>
                 </p>
             </section>
 
             <section id="firstSection">
                 <h3>AGENDA</h3>
                 <ul>
-					<li>Testing & automation</li>
-					<li>Organization</li>
-					<li>Open issues</li>
+					<li>QA strategy</li>
+					<li>Organization QA team & Task</li>
+					<li>Requirements for a solid test plan</li>
+					<li>Automated testing using Slenium</li>
+					<li>Test management with TestLink</li>
+					<li>Regresion testing</li>
+					<li>Plan for QA</li>
                 </ul>
             </section>
-			
-			<section id="secondSection">
+		    <section id="secondSection">
 				<section>
+					<h3>Organization</h2>
+					<ul>
+						<li>QA team </li>
+						<ul><li>Team lead</li></ul>
+						<ul><li>Senior QA</li></ul>
+						<ul><li>Two Interns</li></ul>
+						<div><img src=""/></div>
+						<ul><li>Open positions:</li></ul>
+						<ul><ul><li>Medium QA</li></ul></ul>
+						<ul><ul><li>Junior QA</li></ul></ul>
+						<img src=""/>
+				</section>				
+				<section>
+					<h3>Organization</h2>
+					<ul>
+						<li>Task</li>
+						<ul><li>Testing & testing scenarios</li></ul>
+						<ul><li>Support</li></ul>
+						<ul><li>Automate process</li></ul>
+						<ul><li>Acceptance meetings & acceptance scenarios </li></ul>
+						<div><img src="" /></div>
+					</ul>
+				</section>
+            </section>
 
+			
+			<section id="forthSection">
+				<section>
+					<h3>Requirements for a solid test plan</h3>
+					<ul>
+				        <li>Develop Test Strategy</li>	
+						<li>Define Test Objectives</li>
+						<li>Identify Needed Resources</li>
+						<li>Define Test Procedures</li>
+						<li>Identify Functions to be Tested</li>
+						<li>Identify Interfaces to be Tested</li>
+					</ul>
+				</section>
+            </section>	
+			<section id="thirdSection">
+				<section>
 					<h3>Testing & automation</h3>
 					<ul>
 				        <li>Quality assurance</li>	
@@ -82,34 +125,43 @@
 						<li>Manual testing</li>
 					</ul>
 				</section>
-            </section>
-			
-			<section id="thirdSection">
+            </section>	
+	<section id="fifthSection">
 				<section>
-					<h3>Organization</h2>
+					<h3>Test management with TestLink</h3>
 					<ul>
-						<li>QA team </li>
-						<ul><li>Senior QA & Team lead</li></ul>
-						<ul><li>Junior QA</li></ul>
-						<div><img src="images/CurrentQA.png"/></div>
-						<ul><li>Open positions:</li></ul>
-						<ul><ul><li>Medium QA</li></ul></ul>
-						<ul><ul><li>Intern QA</li></ul></ul>
-						<img src="images/FutureQA.png"/>
-				</section>				
+				        <li>test cases</li>						
+						<li>test suites</li>
+						<li>test plans</li>
+						<li>test projects</li>
+						<li>user management</li>
+						<li>reports</li>
+						<li>statistic</li>
+					</ul>
+				</section>
+            </section>				
+			<section id="sixtSection">
 				<section>
-					<h3>Organization</h2>
+					<h3>QA strategy</h3>
 					<ul>
-						<li>Task</li>
-						<ul><li>Testing & testing scenarios</li></ul>
-						<ul><li>Support</li></ul>
-						<ul><li>Automate process</li></ul>
-						<ul><li>Acceptance meetings & acceptance scenarios </li></ul>
-						<div><img src="images/Organization.png" /></div>
+				        <li>Automate processes</li>	
+						<li>Expand team</li>
+						<li>Train the team</li>
+						<li>Regruit users</li>
 					</ul>
 				</section>
             </section>
-	<section>
+			   <section id="seventhSection">
+				<section>
+					<h3>Regresion testing</h2>
+					<ul>
+						<li>Selenium IDE & Web Driver</li>
+						<li>Test Link</li>
+						<img src=""/>
+				</section>	
+			
+			<section id="eightSection">
+				<section>
 					<h3>Open issues</h2>
 					<ul>
 						<li>QA deficit</li>
