--- a/Danmark20151006/QA/index.html
+++ b/Danmark20151006/QA/index.html
@@ -59,13 +59,12 @@
             <section id="firstSection">
                 <h3>AGENDA</h3>
                 <ul>
-					<li>QA strategy</li>
 					<li>Organization QA team & Task</li>
 					<li>Requirements for a solid test plan</li>
 					<li>Automated testing using Slenium</li>
 					<li>Test management with TestLink</li>
 					<li>Regresion testing</li>
-					<li>Plan for QA</li>
+					<li>QA strategy</li>
                 </ul>
             </section>
 		    <section id="secondSection">
@@ -76,11 +75,11 @@
 						<ul><li>Team lead</li></ul>
 						<ul><li>Senior QA</li></ul>
 						<ul><li>Two Interns</li></ul>
-						<div><img src=""/></div>
+						<div><img src="images/CurrentQA.png" width="300" height="150"/></div>
 						<ul><li>Open positions:</li></ul>
 						<ul><ul><li>Medium QA</li></ul></ul>
 						<ul><ul><li>Junior QA</li></ul></ul>
-						<img src=""/>
+						<img src="images/FutureQA.png" width="300" height="150" />
 				</section>				
 				<section>
 					<h3>Organization</h2>
@@ -90,7 +89,6 @@
 						<ul><li>Support</li></ul>
 						<ul><li>Automate process</li></ul>
 						<ul><li>Acceptance meetings & acceptance scenarios </li></ul>
-						<div><img src="" /></div>
 					</ul>
 				</section>
             </section>
@@ -100,7 +98,13 @@
 				<section>
 					<h3>Requirements for a solid test plan</h3>
 					<ul>
-				        <li>Develop Test Strategy</li>	
+				        <li>Develop Test Strategy </li>	
+						<ul><li>Analyse the product</li></ul>
+						<ul><li>Review available test equipment</li></ul>
+						<ul><li>Review test opportunities</li></ul>
+						<ul><li>Create test strategy document</li></ul>
+						<ul><li>Implement test strategy</li></ul>
+						<ul><li>Review and change test strategy and testin</li></ul>
 						<li>Define Test Objectives</li>
 						<li>Identify Needed Resources</li>
 						<li>Define Test Procedures</li>
@@ -116,12 +120,9 @@
 				        <li>Quality assurance</li>	
 						<li>Automated testing
 						<ul><li>Tools: Slenium IDE & Selenium WebDriver</ul>
-						<ul><li>Current</li></ul>
+						<ul><li>Current/Future</li></ul>
 						<div>
-						<img src="images/current.png" /></div>
-						<ul><li>Future</li></ul>
-						<div>
-						<img src="images/Future.png"/></div>
+						<img src="images/current.png"  height="200" style="display: inline" /> <img src="images/Future.png" height="200" style="display: inline"/></div>
 						<li>Manual testing</li>
 					</ul>
 				</section>
@@ -140,7 +141,16 @@
 					</ul>
 				</section>
             </section>				
-			<section id="sixtSection">
+            </section>
+			   <section id="sixthSection">
+				<section>
+					<h3>Regresion testing</h2>
+					<ul>
+						<li>Selenium IDE & Web Driver</li>
+						<li>Test Link</li>
+				</section>	
+			</section>	
+			<section id="seventhSection">
 				<section>
 					<h3>QA strategy</h3>
 					<ul>
@@ -150,16 +160,8 @@
 						<li>Regruit users</li>
 					</ul>
 				</section>
-            </section>
-			   <section id="seventhSection">
-				<section>
-					<h3>Regresion testing</h2>
-					<ul>
-						<li>Selenium IDE & Web Driver</li>
-						<li>Test Link</li>
-						<img src=""/>
-				</section>	
-			
+				</section>
+				
 			<section id="eightSection">
 				<section>
 					<h3>Open issues</h2>
