--- a/Danmark20151006/QA/index.html
+++ b/Danmark20151006/QA/index.html
@@ -65,6 +65,8 @@
 					<li>Test management with TestLink</li>
 					<li>Regresion testing</li>
 					<li>QA strategy</li>
+					<li>Plan QA</li>
+					<li>Open issues</li>
                 </ul>
             </section>
 		    <section id="secondSection">
@@ -79,6 +81,7 @@
 						<ul><li>Open positions:</li></ul>
 						<ul><ul><li>Medium QA</li></ul></ul>
 						<ul><ul><li>Junior QA</li></ul></ul>
+						<ul><ul><li>2 Intern QA</li></ul></ul>
 						<img src="images/FutureQA.png" width="300" height="150" />
 				</section>				
 				<section>
