--- a/Danmark20151006/QA/index.html
+++ b/Danmark20151006/QA/index.html
@@ -63,6 +63,7 @@
 					<li>Requirements for a solid test plan</li>
 					<li>Automated testing using Slenium</li>
 					<li>Test management with TestLink</li>
+					<li>Test management with Tarantula</li>
 					<li>Regresion testing</li>
 					<li>QA strategy</li>
 					<li>Plan QA</li>
@@ -75,14 +76,11 @@
 					<ul>
 						<li>QA team </li>
 						<ul><li>Team lead</li></ul>
-						<ul><li>Senior QA</li></ul>
-						<ul><li>Two Interns</li></ul>
+						<ul><li>Two Junior QA</li></ul>
+						<ul><li>One Intern</li></ul>
 						<div><img src="images/CurrentQA.png" width="300" height="150"/></div>
-						<ul><li>Open positions:</li></ul>
-						<ul><ul><li>Medium QA</li></ul></ul>
-						<ul><ul><li>Junior QA</li></ul></ul>
-						<ul><ul><li>2 Intern QA</li></ul></ul>
-						<img src="images/FutureQA.png" width="300" height="150" />
+						<li>Open positions:</li>
+						<ul><li>Medium QA</li></ul>
 				</section>				
 				<section>
 					<h3>Organization</h2>
