--- a/Danmark20151006/QA/index.html
+++ b/Danmark20151006/QA/index.html
@@ -149,6 +149,7 @@
 					<ul>
 						<li>Selenium IDE & Web Driver</li>
 						<li>Test Link</li>
+						<li>Tarantula</li>
 						<li>WebPageTest- page performance tool</li>
 				</section>	
 			</section>	
