--- a/IbornProcesses/index.html
+++ b/IbornProcesses/index.html
@@ -44,8 +44,8 @@
                 <h4> Acceptannce test driven development </h4>
                 <hr />
                 <div>
-                    <img src="images/LogoTransparent.jpg" style="margin-top:20px; margin-left:20px; width: 150px; height: 150px; border: none; background: none"
-                    />
+                    <img src="images/LogoTransparent.jpg" style="margin-top:20px; margin-left:20px; width: 150px; height: 150px; border: none; background: none"/>
+                    <img src="images/BDD/econtLogo.jpg" style="margin-top:20px; margin-left:20px; width: 150px; height: 150px; border: none; background: none"/>
                 </div>
                 <div>
                     <div style="text-align: center">
@@ -126,19 +126,19 @@
                 <section>
                     <h3>The piece of code I want to test</h3>
                     <div>
-                        <img src="images/BDD/cucumber1.png" />
+                        <img src="images/BDD/Cucumber1.png" />
                     </div>
                 </section>
                 <section>
                     <h3>Creating feature files</h3>
                     <div>
-                        <img src="images/BDD/cucumber2.png" />
+                        <img src="images/BDD/Cucumber2.png" />
                     </div>
                 </section>
                 <section>
                     <h3>Implementing the necessary steps</h3>
                     <div>
-                        <img src="images/BDD/cucumber3.png" />
+                        <img src="images/BDD/Cucumber3.png" />
                     </div>
                 </section>
             </section>
