Added new slides to the BDD presentation;

--- a/IbornProcesses/index.html
+++ b/IbornProcesses/index.html
@@ -44,8 +44,10 @@
                 <h4> Acceptannce test driven development </h4>
                 <hr />
                 <div>
-                    <img src="images/LogoTransparent.jpg" style="margin-top:20px; margin-left:20px; width: 150px; height: 150px; border: none; background: none"/>
-                    <img src="images/BDD/econtLogo.jpg" style="margin-top:20px; margin-left:20px; width: 150px; height: 150px; border: none; background: none"/>
+                    <img src="images/LogoTransparent.jpg" style="margin-top:20px; margin-left:20px; width: 150px; height: 150px; border: none; background: none"
+                    />
+                    <img src="images/BDD/econtLogo.jpg" style="margin-top:20px; margin-left:20px; width: 150px; height: 150px; border: none; background: none"
+                    />
                 </div>
                 <div>
                     <div style="text-align: center">
@@ -58,21 +60,36 @@
                 </p>
             </section>
 
-            <section id="secondSection">
-                <h3>Genesis</h3>
-                <div>
-                    <img src="images/BDD/UserStory.png" />
-                </div>
-            </section>
+
 
             <section id="thirdSection">
-                <h3>Building the product right and building the right product</h3>
-                <div>
-                    <img src="images/BDD/Right product.png" />
-                </div>
+                <section>
+                    <h3>Building the product right and building the right product</h3>
+                    <div>
+                        <img src="images/BDD/Right product.png" />
+                    </div>
+                </section>
+                <section>
+                    <h3>Software practice should provide the following</h3>
+                    <ul>
+                        <li>Shared understanding of what needs to be delivered</li>
+                        <li>Precise specification</li>
+                        <li>DoD (Definition Of Done)</li>
+                        <li>Documentation to facilitate change</li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Characteristics of a good documentation</h3>
+                    <ul>
+                        <li>Reliable - explains what the system does</li>
+                        <li>Can be used to efficiently check the system</li>
+                        <li>Minimal maintenance costs</li>
+                        <li>Good for short iterations and flow-based processes</li>
+                    </ul>
+                </section>
             </section>
 
-            <section id="4thsection">
+            <section id="fthsection">
                 <h3> Benefits </h3>
                 <ul>
                     <li>Implementing changes more efficiently</li>
@@ -80,6 +97,176 @@
                     <li>Less rework</li>
                     <li>Better alignment of the activities of different roles on a project</li>
                 </ul>
+                <br />
+                <div class="margin-top">
+                    <img src="images/BDD/bdd.jpg" />
+                </div>
+            </section>
+
+
+            <section id="section5">
+                <section>
+                    <h3> Behavior-driven development</h3>
+                    <div>
+                        <img src="images/BDD/RolesBDD.png" />
+                    </div>
+                </section>
+                <section id="secondSection">
+                    <h3>BDD is an "Outside-in" methodology</h3>
+                    <div>
+                        <img src="images/BDD/UserStory.png" />
+                    </div>
+                </section>
+                <section>
+                    <h3> User Story </h3>
+                    <ul>
+                        <li>
+                            "I" ndependent (of all others)
+                        </li>
+                        <li>
+                            "N" egotiable (not a specific contract for features)
+                        </li>
+                        <li>
+                            "V" aluable
+                        </li>
+                        <li>
+                            "E" stimable (to a good approximation)
+                        </li>
+                        <li>
+                            "S" mall (so as to fit within an iteration)
+                        </li>
+                        <li>
+                            "T" estable (in principle, even if there isn't a test for it yet)
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>The structure</h3>
+                    <div>
+                        <img src="images/BDD/structure.png" />
+                    </div>
+                </section>
+                <section>
+                    <h3>The narrative part</h3>
+                    <div>
+                        <img src="images/BDD/UserStory2.png" />
+                    </div>
+                </section>
+                <section>
+                    <h3>Acceptance criteria</h3>
+                    <div>
+                        <img src="images/BDD/bdd-feature.png" />
+                    </div>
+                </section>
+                <section>
+                    <h3>Given - When - Then </h3>
+                    <div>
+                        <img src="images/BDD/GivenWhenThen.png" />
+                    </div>
+                </section>
+            </section>
+
+            <section id="section6">
+                <h3> Optimizing the planning. Imrpoving the scrum methodology </h3>
+                <div class="margin-top">
+                    <img src="images/BDD/Scrum.png" />
+                </div>
+            </section>
+
+            <section id="section7">
+                <section>
+                    <h3> Git Branching Model</h3>
+                    <div class="margin-top">
+                        <img src="images/BDD/git-model@2x.png" />
+                    </div>
+                </section>
+                <section>
+                    <h3> Decentralized but centralized </h3>
+                    <ul>
+                        <li>Origin</li>
+                        <li>Centralized push-pull relationship</li>
+                        <li>Subteams</li>
+                    </ul>
+                    <div class="margin-top">
+                        <img src="images/BDD/centr-decentr@2x.png" />
+                    </div>
+                </section>
+                <section>
+                    <h3>The main branches</h3>
+                    <ul>
+                        <li>master</li>
+                        <li>develop</li>
+                    </ul>
+                    <div>
+                        <img src="images/BDD/main-branches@2x.png" />
+                    </div>
+                </section>
+                <section>
+                    <h3>The supportive branches </h3>
+                    <ul>
+                        <li> Feature branches </li>
+                        <li> Release branches </li>
+                        <li> Hotfix branches </li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Feature branches</h3>
+                    <ul>
+                        <li> These branches are used to develop new features for the upcoming or a distant future release. </li>
+                    </ul>
+                    <div>
+                        <img src="images/BDD/fb@2x.png" />
+                    </div>
+                </section>
+                <section>
+                    <h3>Release branches</h3>
+                    <ul>
+                        <li> Release branches support preparation of a new production release. </li>
+                        <li>The key moment to branch off a new release branch from develop is when develop (almost) reflects
+                            the desired state of the new release. </li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Hotfix branches</h3>
+                    <ul>
+                        <li>They arise from the necessity to act immediately upon an undesired state of a live production version.
+                        </li>
+                    </ul>
+                    <div>
+                        <img src="images/BDD/hotfix-branches@2x.png" />
+                    </div>
+                </section>
+            </section>
+
+            <section id="section8">
+                <section>
+                    <h3>Code Review</h3>
+                    <ul>
+                        <li>Catch bugs earlier in the development process</li>
+                        <li>Improve code quality and maintain architecture</li>
+                        <li>Implement standards</li>
+                        <li>Motivate each other to make better solutions</li>
+                        <li>Share knowledge and gain experience faster</li>
+                    </ul>
+                </section>
+                <section>
+                    <h3> When a feature branch is completed </h3>
+                    <div class="margin-top">
+                        <img src="images/BDD/codeReviewFeature.png" />
+                    </div>
+                </section>
+                <section>
+                    <h3> When a release branch is ready for production </h3>
+                    <div class="margin-top">
+                        <img src="images/BDD/codeReviewRelease.png" />
+                    </div>
+                </section>
+                <section>
+                    <h3> When a hotfix branch is ready for production </h3>
+                    <div class="margin-top">
+                        <img src="images/BDD/codeReviewHotfix.png" />
+                    </div>
+                </section>              
             </section>
 
             <section id="5thsection">
@@ -93,23 +280,24 @@
                     <h3> Examples </h3>
                     <ul>
                         <li>
-                             <a href="https://docs.google.com/document/d/1CONMMXokYPGb90Kcso5GHnaOTqqcAthdN9QCuI3hgl4/edit" target="_blank" >Epic 1 </a>
+                            <a href="https://docs.google.com/document/d/1CONMMXokYPGb90Kcso5GHnaOTqqcAthdN9QCuI3hgl4/edit" target="_blank">Epic 1 </a>
                         </li>
                         <li>
                             <a href="https://docs.google.com/document/d/1D_HrJ6T4QXZqFvMlRFYPUSYok4UYvI44gJN-EtCGlMg/edit" target="_blank"> Epic 2 </a>
                         </li>
-                         <li>
+                        <li>
                             <a href="https://docs.google.com/document/d/1624AthFoI7ahpZej_9tj7UYdZAfEXkRpsQPKFiAG5cY/edit" target="_blank"> Epic 3 </a>
                         </li>
                     </ul>
                 </section>
                 <section>
                     <h3>Redmine</h3>
-                     <ul>
+                    <ul>
                         <li>
-                             <a href="https://projects.iborn.net/projects/warning/issues?utf8=%E2%9C%93&set_filter=1&f%5B%5D=status_id&op%5Bstatus_id%5D=o&f%5B%5D=&c%5B%5D=tracker&c%5B%5D=status&c%5B%5D=priority&c%5B%5D=author&c%5B%5D=subject&c%5B%5D=assigned_to&c%5B%5D=updated_on&c%5B%5D=fixed_version&c%5B%5D=start_date&c%5B%5D=due_date&c%5B%5D=estimated_hours&c%5B%5D=spent_hours&group_by=tracker" target="_blank" >Redmine Link </a>
+                            <a href="https://projects.iborn.net/projects/warning/issues?utf8=%E2%9C%93&set_filter=1&f%5B%5D=status_id&op%5Bstatus_id%5D=o&f%5B%5D=&c%5B%5D=tracker&c%5B%5D=status&c%5B%5D=priority&c%5B%5D=author&c%5B%5D=subject&c%5B%5D=assigned_to&c%5B%5D=updated_on&c%5B%5D=fixed_version&c%5B%5D=start_date&c%5B%5D=due_date&c%5B%5D=estimated_hours&c%5B%5D=spent_hours&group_by=tracker"
+                                target="_blank">Redmine Link </a>
                         </li>
-                     </ul>
+                    </ul>
                 </section>
             </section>
             <section id="6thSection">
