--- a/IbornProcesses/index.html
+++ b/IbornProcesses/index.html
@@ -143,7 +143,7 @@
                 <section>
                     <h3>The structure</h3>
                     <div>
-                        <img src="images/BDD/structure.png" />
+                        <img src="images/BDD/Structure.png" />
                     </div>
                 </section>
                 <section>
