--- a/IbornProcesses/index.html
+++ b/IbornProcesses/index.html
@@ -70,40 +70,15 @@
                     </div>
                 </section>
                 <section>
-                    <h3>Software practice should provide the following</h3>
+                    <h3>Software methodology should provide the following</h3>
                     <ul>
-                        <li>Shared understanding of what needs to be delivered</li>
+                        <li>Shared understanding</li>
                         <li>Precise specification</li>
                         <li>DoD (Definition Of Done)</li>
-                        <li>Documentation to facilitate change</li>
-                    </ul>
-                </section>
-                <section>
-                    <h3>Characteristics of a good documentation</h3>
-                    <ul>
-                        <li>Reliable - explains what the system does</li>
-                        <li>Can be used to efficiently check the system</li>
-                        <li>Minimal maintenance costs</li>
-                        <li>Good for short iterations and flow-based processes</li>
+                        <li>Documentation</li>
                     </ul>
                 </section>
             </section>
-
-            <section id="fthsection">
-                <h3> Benefits </h3>
-                <ul>
-                    <li>Implementing changes more efficiently</li>
-                    <li>Higher product quality</li>
-                    <li>Less rework</li>
-                    <li>Better alignment of the activities of different roles on a project</li>
-                </ul>
-                <br />
-                <div class="margin-top">
-                    <img src="images/BDD/bdd.jpg" />
-                </div>
-            </section>
-
-
             <section id="section5">
                 <section>
                     <h3> Behavior-driven development</h3>
@@ -130,7 +105,7 @@
                             "V" aluable
                         </li>
                         <li>
-                            "E" stimable (to a good approximation)
+                            "E" stimatable (to a good approximation)
                         </li>
                         <li>
                             "S" mall (so as to fit within an iteration)
@@ -164,13 +139,56 @@
                         <img src="images/BDD/GivenWhenThen.png" />
                     </div>
                 </section>
+                 <section>
+                    <h3>Example  </h3>
+                    <div>
+                        <img src="images/BDD/UserStoryExample.png" />
+                    </div>
+                </section>
             </section>
 
             <section id="section6">
-                <h3> Optimizing the planning. Imrpoving the scrum methodology </h3>
+                <section>
+                    <h3> Optimizing the planning. Imrpoving the scrum methodology </h3>
+                    <div class="margin-top">
+                        <img src="images/BDD/Scrum.png" />
+                    </div>
+                </section>
+                <section>
+                    <h3> Product backlog needs to be in a form of a user stories </h3>
+                     <div class="margin-top">
+                        <img src="images/BDD/backlog.png" />
+                    </div>
+                </section>        
+                <section>
+                    <h3> Daily stand-up meetings</h3>
+                    <ul>
+                        <li> Conversation around user stories </li>
+                        <li> Adding new scenarios </li>
+                        <li> Status and progress </li>
+                    </ul>
+                     <div class="margin-top">
+                        <img src="images/BDD/bd.png" />
+                    </div>
+                </section>      
+            </section>
+            </section>
+
+            <section id="fthsection">
+                <h3> Benefits </h3>
+                <ul>
+                    <li>Implementing changes more efficiently</li>
+                    <li>Higher product quality</li>
+                    <li>Less rework</li>
+                    <li>Better alignment of the activities of different roles on a project</li>
+                </ul>
+                <br />
                 <div class="margin-top">
-                    <img src="images/BDD/Scrum.png" />
+                    <img src="images/BDD/bdd.jpg" />
                 </div>
+            </section>
+
+            <section id="emptySection">
             </section>
 
             <section id="section7">
@@ -266,7 +284,7 @@
                     <div class="margin-top">
                         <img src="images/BDD/codeReviewHotfix.png" />
                     </div>
-                </section>              
+                </section>
             </section>
 
             <section id="5thsection">
