Changes from Gordon;

--- a/IbornProcesses/index.html
+++ b/IbornProcesses/index.html
@@ -139,8 +139,8 @@
                         <img src="images/BDD/GivenWhenThen.png" />
                     </div>
                 </section>
-                 <section>
-                    <h3>Example  </h3>
+                <section>
+                    <h3>Example </h3>
                     <div>
                         <img src="images/BDD/UserStoryExample.png" />
                     </div>
@@ -156,10 +156,10 @@
                 </section>
                 <section>
                     <h3> Product backlog needs to be in a form of a user stories </h3>
-                     <div class="margin-top">
+                    <div class="margin-top">
                         <img src="images/BDD/backlog.png" />
                     </div>
-                </section>        
+                </section>
                 <section>
                     <h3> Daily stand-up meetings</h3>
                     <ul>
@@ -167,10 +167,16 @@
                         <li> Adding new scenarios </li>
                         <li> Status and progress </li>
                     </ul>
-                     <div class="margin-top">
+                    <div class="margin-top">
                         <img src="images/BDD/bd.png" />
                     </div>
-                </section>      
+                </section>
+                <section>
+                    <h3> Workflow of user stories</h3>
+                    <div class="margin-top">
+                        <img src="images/BDD/workflow.png" />
+                    </div>
+                </section>
             </section>
             </section>
 
