Burn-down chart slide added

--- a/IbornProcesses/index.html
+++ b/IbornProcesses/index.html
@@ -172,6 +172,12 @@
                     </div>
                 </section>
                 <section>
+                    <h3> Burn-down chart improvements</h3>
+                    <div class="margin-top">
+                        <img src="images/BDD/burnDownChart.png" />
+                    </div>
+                </section>
+                <section>
                     <h3> Workflow of user stories</h3>
                     <div class="margin-top">
                         <img src="images/BDD/workflow.png" />
