Small changes into presentation;

--- a/IbornProcesses/index.html
+++ b/IbornProcesses/index.html
@@ -41,7 +41,7 @@
                 <hr />
                 <h3>Econt projects</h3>
                 <h4> Behavior driven development </h4>
-                <h4> Acceptannce test driven development </h4>
+                <h4> Specification by Example </h4>
                 <hr />
                 <div>
                     <img src="images/LogoTransparent.jpg" style="margin-top:20px; margin-left:20px; width: 150px; height: 150px; border: none; background: none"
@@ -72,7 +72,7 @@
                 <section>
                     <h3>Software methodology should provide the following</h3>
                     <ul>
-                        <li>Shared understanding</li>
+                        <li>Shared understanding of what needs to be done</li>
                         <li>Precise specification</li>
                         <li>DoD (Definition Of Done)</li>
                         <li>Documentation</li>
